fix: forces docs scroll fix to be respected on mobile

--- a/src/app/docs/[topic]/[doc]/index.module.scss
+++ b/src/app/docs/[topic]/[doc]/index.module.scss
@@ -16,9 +16,9 @@
 .title {
   @include h2;
   // dumb
-  margin-top: calc(var(--base) * -8);
+  margin-top: calc(var(--base) * -8) !important;
   // dumb
-  padding-top: calc(var(--base) * 8);
+  padding-top: calc(var(--base) * 8) !important;
 }
 
 .content {
